<?xml version="1.0"?>
<package format="2">
  <name>radius_2d_outlier_removal_filter</name>
  <version>0.0.1</version>
  <description>The radius_2d_outlier_removal_filter package</description>

  <maintainer email="hiroaki.ishikawa@tier4.jp">hiroaki</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roslint</build_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>nodelet</exec_depend>

  <export>
    <nodelet plugin="${prefix}/radius_2d_outlier_removal_filter.xml" />
  </export>
</package>
